ingress/cola-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cola-nginx
  labels:
    app: cola-nginx
spec:
  type: NodePort
  ports:
  - port: 80
    name: http
  selector:
    app: cola-nginx
