ingress/pepsi-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pepsi-nginx
  labels:
    app: pepsi-nginx
spec:
  type: NodePort
  ports:
  - port: 80
    name: http
  selector:
    app: pepsi-nginx
